bluegreen/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-app-blue
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-app
      version: blue
  template:
    metadata:
      labels:
        app: k8s-app
        version: blue
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: k8s-app
        image: smitdarji/k8s:v1.0.100   # 🔹 Blue version (current stable)
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
