bluegreen/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-green
  namespace: webapp-bg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
      version: green
  template:
    metadata:
      labels:
        app: webapp
        version: green
    spec:
      containers:
        - name: webapp
          image: smitdarji/k8s:v.gg.1.3
          ports:
            - containerPort: 80
