bluegreen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-bg-service
  namespace: webapp-bg
spec:
  selector:
    app: webapp
    version: green   # 🔁 Change this to "green" when switching traffic
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
