bluegreen/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-bg-ingress
  namespace: webapp-bg
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: webapp-bg.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-bg-stable
                port:
                  number: 80
